--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/HeroImage.jpg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="Portfolio website created by Prabhas"
-        />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/HeroImage.jpg" />
-        <!--
+  <head>
+    <meta charset="utf-8" />
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/di4ieoutf/image/upload/v1723967600/WhatsApp_Image_2024-08-18_at_1.16.54_PM_lpmgpd.jpg"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Portfolio website created by Akhil" />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/di4ieoutf/image/upload/v1723967600/WhatsApp_Image_2024-08-18_at_1.16.54_PM_lpmgpd.jpg"
+    />
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <!--
+    <link
+      rel="manifest"
+      href="https://res.cloudinary.com/di4ieoutf/image/upload/v1723967685/WhatsApp_Image_2024-08-18_at_1.24.20_PM_wen9tr.jpg"
+    />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +30,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Petta Sri Sai Prabhas</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-        <!--
+    <title>Akhils portfolio</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -38,5 +44,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    -->
+  </body>
 </html>
