--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link
-      rel="manifest"
-      href="https://res.cloudinary.com/di4ieoutf/image/upload/v1723967685/WhatsApp_Image_2024-08-18_at_1.24.20_PM_wen9tr.jpg"
-    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
